bug index corrigido

--- a/Doces/doces-sul.html
+++ b/Doces/doces-sul.html
@@ -87,72 +87,72 @@
 
           <li class="nav-item">
             <div class="container">
-              <a class="nav-link nav-hover h6" href="index.html"><strong>Início</strong></a>
+              <a class="nav-link nav-hover h6" href="../index.html"><strong>Início</strong></a>
             </div>
           </li>
 
           <li class="nav-item">
             <div class="container">
-              <a class="nav-link nav-hover h6" href="quemsomos.html"><strong>Quem Somos</strong></a>
+              <a class="nav-link nav-hover h6" href="../quemsomos.html"><strong>Quem Somos</strong></a>
             </div>
           </li>
 
           <li class="nav-item ms-3 me-3 dropdown">
-            <a class="nav-link nav-hover h6" href="doces.html"><strong>Doces</strong></a>
+            <a class="nav-link nav-hover h6" href="#"><strong>Doces</strong></a>
             <ul class="dropdown-menu border-warning">
-              <li><a class="dropdown-item" href="Doces/doces-sul.html">Sul</a></li>
-              <li><a class="dropdown-item" href="Doces/doces-sudeste.html">Sudeste</a></li>
-              <li><a class="dropdown-item" href="Doces/doces-centro-oeste.html">Centro-Oeste</a></li>
-              <li><a class="dropdown-item" href="Doces/doces-nordeste.html">Nordeste</a></li>
-              <li><a class="dropdown-item" href="Doces/doces-norte.html">Norte</a></li>
+              <li><a class="dropdown-item" href="../Doces/doces-sul.html">Sul</a></li>
+              <li><a class="dropdown-item" href="../Doces/doces-sudeste.html">Sudeste</a></li>
+              <li><a class="dropdown-item" href="../Doces/doces-centro-oeste.html">Centro-Oeste</a></li>
+              <li><a class="dropdown-item" href="../Doces/doces-nordeste.html">Nordeste</a></li>
+              <li><a class="dropdown-item" href="../Doces/doces-norte.html">Norte</a></li>
             </ul>
           </li>
 
           <li class="nav-item ms-3 me-3 dropdown">
             <a class="nav-link nav-hover h6" href="#" role="button"><strong>Salgados</strong></a>
             <ul class="dropdown-menu border-warning">
-              <li><a class="dropdown-item" href="Salgados/salgados-sul.html">Sul</a></li>
-              <li><a class="dropdown-item" href="Salgados/salgados-sudeste.html">Sudeste</a></li>
-              <li><a class="dropdown-item" href="Salgados/salgados-centro-oeste.html">Centro-Oeste</a></li>
-              <li><a class="dropdown-item" href="Salgados/salgados-nordeste.html">Nordeste</a></li>
-              <li><a class="dropdown-item" href="Salgados/salgados-norte.html">Norte</a></li>
+              <li><a class="dropdown-item" href="../Salgados/salgados-sul.html">Sul</a></li>
+              <li><a class="dropdown-item" href="../Salgados/salgados-sudeste.html">Sudeste</a></li>
+              <li><a class="dropdown-item" href="../Salgados/salgados-centro-oeste.html">Centro-Oeste</a></li>
+              <li><a class="dropdown-item" href="../Salgados/salgados-nordeste.html">Nordeste</a></li>
+              <li><a class="dropdown-item" href="../Salgados/salgados-norte.html">Norte</a></li>
             </ul>
           </li>
 
           <li class="nav-item ms-3 me-3 dropdown">
             <a class="nav-link nav-hover h6" href="#" role="button"><strong>Bebidas</strong></a>
             <ul class="dropdown-menu border-warning">
-              <li><a class="dropdown-item" href="Bebidas/bebidas-sul.html">Sul</a></li>
-              <li><a class="dropdown-item" href="Bebidas/bebidas-sudeste.html">Sudeste</a></li>
-              <li><a class="dropdown-item" href="Bebidas/bebidas-centro-oeste.html">Centro-Oeste</a></li>
-              <li><a class="dropdown-item" href="Bebidas/bebidas-nordeste.html">Nordeste</a></li>
-              <li><a class="dropdown-item" href="Bebidas/bebidas-norte.html">Norte</a></li>
+              <li><a class="dropdown-item" href="../Bebidas/bebidas-sul.html">Sul</a></li>
+              <li><a class="dropdown-item" href="../Bebidas/bebidas-sudeste.html">Sudeste</a></li>
+              <li><a class="dropdown-item" href="../Bebidas/bebidas-centro-oeste.html">Centro-Oeste</a></li>
+              <li><a class="dropdown-item" href="../Bebidas/bebidas-nordeste.html">Nordeste</a></li>
+              <li><a class="dropdown-item" href="../Bebidas/bebidas-norte.html">Norte</a></li>
             </ul>
           </li>
 
           <li class="nav-item ms-3 me-3 dropdown">
             <a class="nav-link nav-hover h6" href="#" role="button"><strong>Carnes</strong></a>
             <ul class="dropdown-menu border-warning">
-              <li><a class="dropdown-item" href="Carnes/carnes-sul.html">Sul</a></li>
-              <li><a class="dropdown-item" href="Carnes/carnes-sudeste.html">Sudeste</a></li>
-              <li><a class="dropdown-item" href="Carnes/carnes-centro-oeste.html">Centro-Oeste</a></li>
-              <li><a class="dropdown-item" href="Carnes/carnes-nordeste.html">Nordeste</a></li>
-              <li><a class="dropdown-item" href="Carnes/carnes-norte.html">Norte</a></li>
+              <li><a class="dropdown-item" href="../Carnes/carnes-sul.html">Sul</a></li>
+              <li><a class="dropdown-item" href="../Carnes/carnes-sudeste.html">Sudeste</a></li>
+              <li><a class="dropdown-item" href="../Carnes/carnes-centro-oeste.html">Centro-Oeste</a></li>
+              <li><a class="dropdown-item" href="../Carnes/carnes-nordeste.html">Nordeste</a></li>
+              <li><a class="dropdown-item" href="../Carnes/carnes-norte.html">Norte</a></li>
             </ul>
           </li>
 
           <li class="nav-item ms-3 me-3 dropdown">
             <a class="nav-link nav-hover h6" href="#" role="button"><strong>Saladas e molhos</strong></a>
             <ul class="dropdown-menu border-warning">
-              <li><a class="dropdown-item" href="Sal-Mol/s.m-sul.html">Sul</a></li>
-              <li><a class="dropdown-item" href="Sal-Mol/s.m-sudeste.html">Sudeste</a></li>
-              <li><a class="dropdown-item" href="Sal-Mol/s.m-centro-oeste.html">Centro-Oeste</a></li>
-              <li><a class="dropdown-item" href="Sal-Mol/s.m-nordeste.html">Nordeste</a></li>
-              <li><a class="dropdown-item" href="Sal-Mol/s.m-norte.html">Norte</a></li>
+              <li><a class="dropdown-item" href="../Sal-Mol/s.m-sul.html">Sul</a></li>
+              <li><a class="dropdown-item" href="../Sal-Mol/s.m-sudeste.html">Sudeste</a></li>
+              <li><a class="dropdown-item" href="../Sal-Mol/s.m-centro-oeste.html">Centro-Oeste</a></li>
+              <li><a class="dropdown-item" href="../Sal-Mol/s.m-nordeste.html">Nordeste</a></li>
+              <li><a class="dropdown-item" href="../Sal-Mol/s.m-norte.html">Norte</a></li>
             </ul>
           </li>
         </ul>
-        <a class="navbar-brand mx-4 tooltip-recado" href="livro.html" data-recado="Suas receitas favoritas!">
+        <a class="navbar-brand mx-4 tooltip-recado" href="../livro.html" data-recado="Suas receitas favoritas!">
           <!--Logo livro de receitas-->
           <img src="../img/receitas.fav.png" alt="Cantinho" width="50" height="50">
         </a>
@@ -217,7 +217,7 @@
     <ul>4- Mexa de vez em quando, com cuidado.</ul>
     <ul>5- Depois deixe ferver até ficar quase seca.</ul>
 
-      <!-- Botões movidos para o final -->
+      <!-- Botões -->
   <div class="recipe-actions">
     <button class="action-btn">
         <i class="fa fa-heart"></i> Favoritar
@@ -286,7 +286,7 @@
           <ul>6- Quando começar a ferver, coloque o sagu e espere cozinhar mais uns 15 minutos, até todas as bolas ficarem transparentes.</ul>
           <ul>7- Coloque em um recipiente e deixe esfriar.</ul>
 
-            <!-- Botões movidos para o final -->
+            <!-- Botões -->
   <div class="recipe-actions">
     <button class="action-btn">
         <i class="fa fa-heart"></i> Favoritar
