--- a/Doces/doces-sul.html
+++ b/Doces/doces-sul.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cantinho BRasileiro</title>
+  <title>Doces Sulistas | Cantinho BRasileiro</title>
 
   <!-- LINK BOOTSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -165,7 +165,7 @@
   <img src="../img/INICIO-SUL.png" alt="Doces do Sul" class="image-left">
   <div class="text-box">
       <h1>Doces do Sul</h1>
-      <h3>O Sul do Brasil tem doces tradicionais que carregam influências europeias e sabores marcantes. Entre os mais conhecidos, o sagu de vinho e a ambrosia conquistam pelo sabor e textura irresistíveis, sendo presença certa nas mesas da região.</h3>
+      <h3>O Sul do Brasil tem doces tradicionais que carregam influências europeias e sabores marcantes. Entre os mais conhecidos, o Sagu de Vinho e a Ambrosia conquistam pelo sabor e textura irresistíveis, sendo presença certa nas mesas da região.</h3>
   </div>
 </div>
 
